# ID-Fan-Project-MS-Thesis-

./: README.md  pyproject.toml  requirements.txt  streamlit_app.py
.streamlit/: config.toml
app/: app.py
app/tools/: model_evaluator.py
app/utils/: data_utils.py  style.py
app/views/: about.py  home.py  predictions.py
notebooks/: main.ipynb
output/: results.csv  test_dataset.csv
output/ckpts/: Extra_Trees.joblib  KNN.joblib  LightGBM.joblib  Logistic_Regression.joblib  MLP_(Neural_Net).joblib  Random_Forest.joblib  SVM_(RBF).joblib  XGBoost.joblib  scaler.joblib
